<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Queue Underflow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="askAQuestion">Ask A Question</string>
    <string name="addAnAnswer">Add An Answer</string>
    <string name="mostRecent">Most Recent</string>
    <string name="leastRecent">Least Recent</string>
    <string name="mostUpvotes">Most Upvotes</string>
    <string name="hasPicture">Has Picture</string>
    <string name="noPicture">No Picture</string>
    <string name="sortBy">Sort By</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="ask">Ask</string>
    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="drawerOpen">Navigation drawer is open</string>
    <string name="drawerClosed">Navigation drawer is closed</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_ask_aquestion">AskAQuestionActivity</string>
    <string name="title_activity_qaview">QAViewActivity</string>
    <string name="title_activity_add_an_answer">AddAnAnswerActivity</string>
    <string name="title_activity_set_location_fragment">Set Location</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="nearbyQuestions">Nearby questions</string>
    <string name="nearbyAnswers">Nearby answers</string>

</resources>
